@@ -41,7 +41,6 @@ public final class DriverFactory {
                 driver = new RemoteWebDriver(new URL("http://localhost:4444/wd/hub"), options);
                 driver.manage().window().fullscreen();
 */
-
                 options.setCapability("selenoid:options", new HashMap() {{
                     put("name", "Test badge...");
                     put("sessionTimeout", "5m");
@@ -55,8 +54,8 @@ public final class DriverFactory {
 
 
                  //selenoid:4444 for Running Jenkins with Docker
-                 driver = new RemoteWebDriver(new URL("http://selenoid:4444/wd/hub"), options);
-                //driver = new RemoteWebDriver(URI.create("http://localhost:4444/wd/hub").toURL(),options);
+                 //driver = new RemoteWebDriver(new URL("http://selenoid:4444/wd/hub"), options);
+                 driver = new RemoteWebDriver(URI.create("http://localhost:4444/wd/hub").toURL(),options);
                  driver.manage().window().fullscreen();
 
             }
@@ -82,8 +81,8 @@ public final class DriverFactory {
                     put("labels", new HashMap<String, Object>()
                     {{put("manual", "true");}});
                 }});
-                driver = new RemoteWebDriver(new URL("http://selenoid:4444/wd/hub"), options);
-                //driver = new RemoteWebDriver(URI.create("http://localhost:4444/wd/hub").toURL(),options);
+                //driver = new RemoteWebDriver(new URL("http://selenoid:4444/wd/hub"), options);
+                driver = new RemoteWebDriver(URI.create("http://localhost:4444/wd/hub").toURL(),options);
             }
             else {
                 WebDriverManager.chromedriver().setup();
